# oncelock-stdin

./: .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  moon.yml  rust-toolchain.toml  taplo.toml
.config/: hakari.toml  nextest.toml
.moon/: tasks.yml  workspace.yml
crates/stub/: Cargo.toml  moon.yml
crates/stub/src/: main.rs
crates/workspace/: Cargo.toml
crates/workspace/src/: lib.rs
